# projets-indexer-public

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  prompt.md
examples/: basic_usage.rs
src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  ollama.rs  types.rs  ui.rs
src/config/: indexer_config.rs  mod.rs
src/indexer/: mod.rs  project_indexer.rs
src/models/: mod.rs  project.rs
src/ollama/: client.rs  mod.rs  setup.rs
